--- a/gamification/src/main/resources/application.yml
+++ b/gamification/src/main/resources/application.yml
@@ -1,2 +1,10 @@
 server:
   port: 8081
+
+multiplication:
+  exchange: multiplication_exchange
+  solved:
+    key: multiplication.solved
+  queue: gamification_multiplication_queue
+  anything:
+    routing-key: multiplication.*
