--- a/gamification/src/main/resources/application.yml
+++ b/gamification/src/main/resources/application.yml
@@ -1,6 +1,20 @@
 server:
   port: 8081
 
+spring:
+    datasource:
+        url: jdbc:h2:file:~/gamification;DB_CLOSE_ON_EXIT=FALSE;
+    h2:
+        console:
+            enabled: true
+            path: /h2-console
+    jpa:
+        hibernate:
+            ddl-auto: update
+        properties:
+            hibernate:
+                show_sql: true
+
 multiplication:
   exchange: multiplication_exchange
   solved:
@@ -8,3 +22,5 @@ multiplication:
   queue: gamification_multiplication_queue
   anything:
     routing-key: multiplication.*
+
+multiplicationHost: http://localhost:8080
