--- a/gamification/build.gradle
+++ b/gamification/build.gradle
@@ -23,6 +23,10 @@ repositories {
 	mavenCentral()
 }
 
+ext {
+	springCloudVersion = 'Edgware.RELEASE'
+}
+
 
 dependencies {
 	compile('org.springframework.boot:spring-boot-starter-amqp:1.5.9.RELEASE')
@@ -31,4 +35,16 @@ dependencies {
 	compileOnly('org.projectlombok:lombok:1.16.18')
 	compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: '1.5.9.RELEASE'
 	testCompile('org.springframework.boot:spring-boot-starter-test')
+	// https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-eureka
+	compile group: 'org.springframework.cloud', name: 'spring-cloud-starter-eureka', version: '1.4.0.RELEASE'
+	// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-actuator
+	compile group: 'org.springframework.boot', name: 'spring-boot-starter-actuator', version: '1.5.9.RELEASE'
+	// https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-hystrix
+	compile group: 'org.springframework.cloud', name: 'spring-cloud-starter-hystrix', version: '1.4.0.RELEASE'
+}
+
+dependencyManagement {
+	imports {
+		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+	}
 }
