--- a/social-multiplication/build.gradle
+++ b/social-multiplication/build.gradle
@@ -28,6 +28,10 @@ repositories {
 	jcenter()
 }
 
+ext {
+	springCloudVersion = 'Edgware.RELEASE'
+}
+
 dependencies {
 	compile('org.springframework.boot:spring-boot-starter')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
@@ -43,5 +47,14 @@ dependencies {
 	compile group: 'com.h2database', name: 'h2', version: '1.4.196'
 	// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-amqp
 	compile group: 'org.springframework.boot', name: 'spring-boot-starter-amqp', version: '1.5.9.RELEASE'
+	// https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-eureka
+	compile group: 'org.springframework.cloud', name: 'spring-cloud-starter-eureka', version: '1.4.0.RELEASE'
+	// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-actuator
+	compile group: 'org.springframework.boot', name: 'spring-boot-starter-actuator', version: '1.5.9.RELEASE'
+}
 
+dependencyManagement {
+	imports {
+		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+	}
 }
