--- a/social-multiplication/src/main/resources/application.yml
+++ b/social-multiplication/src/main/resources/application.yml
@@ -1,6 +1,9 @@
+server:
+  port: 8080
+
 spring:
     datasource:
-        url: jdbc:h2:file:~/social-multiplication;DB_CLOSE_ON_EXIT=FALSE;
+        url: jdbc:h2:file:~/social-multiplication;DB_CLOSE_ON_EXIT=FALSE;AUTO_SERVER=TRUE
     h2:
         console:
             enabled: true
@@ -16,3 +19,8 @@ multiplication:
   exchange: multiplication_exchange
   solved:
     key: multiplication.solved
+
+eureka:
+  client:
+    service-url:
+      default-zone: http://localhost:8761/eureka/
